--- a/src/index.css
+++ b/src/index.css
@@ -243,3 +243,30 @@ body::before {
   display: none;
 }
 
+.shine-card::before {
+  content: '';
+  position: absolute;
+  top: -50%;
+  left: -50%;
+  
+  width: 200%;
+  height: 200%;
+  background: linear-gradient(
+    120deg,
+    transparent 0%,
+    rgba(255, 32, 32, 0.1) 50%,
+    transparent 100%
+  );
+  transform: rotate(25deg);
+  animation: shine 3s infinite;
+}
+
+@keyframes shine {
+  0% {
+    transform: translateX(-100%) translateY(-60%) rotate(25deg);
+  }
+  100% {
+    transform: translateX(100%) translateY(60%) rotate(25deg);
+  }
+}
+
